[package]
name = "color-anyhow"
version = "0.5.0"
authors = ["Jane Lusby <jlusby@yaah.dev>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "An error report handler for panics and anyhow::Error types for colorful, consistent, and well formatted error reports for all kinds of errors."
repository = "https://github.com/yaahc/color-anyhow"
documentation = "https://docs.rs/color-anyhow"
readme = "README.md"
categories = []
keywords = []

[features]
default = ["capture-spantrace"]
capture-spantrace = ["tracing-error", "color-spantrace"]

[dependencies]
anyhow = { git = "https://github.com/yaahc/anyhow.git", branch = "handler_hook" }
tracing-error = { version = "0.1.2", optional = true }
backtrace = { version = "0.3.48", features = ["gimli-symbolize"] }
indenter = "0.3.0"
ansi_term = "0.11"
color-spantrace = { version = "0.1.4", optional = true }
once_cell = "1.4.0"
btparse = { git = "https://github.com/yaahc/btparse.git", branch = "stable" }

[dev-dependencies]
tracing-subscriber = "0.2.5"
tracing = "0.1.13"
pretty_assertions = "0.6.1"
thiserror = "1.0.19"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[profile.dev.package.backtrace]
opt-level = 3
